--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>野間口健尚 ポートフォリオサイト</title>
-    <link rel="stylesheet" href="css/styles.css?483927">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 </head>
