--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <script src="js/main.js">        
     </script>
-    <script>
+    <script type="text/javascript">
         $(function(){
           $('a[href^="#"]').click(function() {
             var speed = 500;
