--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>野間口健尚 ポートフォリオサイト</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script type="text/javascript">
-        $(function(){
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js">$(function(){
           $('a[href^="#"]').click(function() {
             var speed = 500;
             var href= $(this).attr("href");
@@ -16,8 +14,7 @@
             $('body,html').animate({scrollTop:position}, speed, 'swing');
             return false;
           });
-        });
-      </script>
+        });</script>
 </head>
 <body>
     <header>
