--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>野間口健尚 ポートフォリオサイト</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <script src="http://code.jquery.com/jquery-3.1.0.min.js">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js">
         $(function(){
           $('a[href^="#"]').click(function() {
             var speed = 500;
