--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </p>
             <p>
                 趣味：ゲーム(特にポケモン)、ドラマ観賞、音楽(演奏・観賞・作曲)<br>
-                スキル：HTML/CSS/JavaScript/Node.js/PHPCycling '74 Max/Logic Pro X
+                スキル：HTML/CSS/JavaScript/Node.js/PHP/Cycling '74 Max/Logic Pro X
             </p>
             <p>
                 大学の授業でプログラミングに出会ったのをきっかけに、<br>
