--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="utf-8">
@@ -49,21 +50,22 @@
     </section>
     <section class="works" id="wks">
         <h2><i class="fas fa-headphones-alt"></i>Works</h2>
-        <p><span>2017年薩摩川内市クリスマステーマソング「illuminate」(2017)</span><br>
-            ストリングス：カルテット「chouchou」
-        </p>
-            <audio id="playSong" src="クリスマステーマソング.wav" controls></audio>
-        <p><span>フルート独奏のための奇想曲(2017)</span><br>
-            フルート：細川 杏子
-        </p>
-            <audio id="playSong" src="09 Capriccio.m4a" controls></audio>
-        <p><span>アルトサクソフォンとピアノのための3つの詩曲(2019)</span><br>
-            サクソフォン：近藤 那未<br>
-            ピアノ：金原 あかり
-        </p>
-            <audio id="playSong" src="03 野間口.m4a" controls></audio>
-        
-
+            <ul class="songs">
+                <li class="song active">
+                    <p><span>2017年薩摩川内市クリスマステーマソング「illuminate」(2017)</span><br>
+                        ストリングス：カルテット「chouchou」</p>
+                        <audio src="クリスマステーマソング.m4a" controls></audio>
+                </li>
+                <li class="song">
+                    <p><span>フルート独奏のための奇想曲(2017)</span><br>
+                        フルート：細川 杏子</p>
+                        <audio src="09 Capriccio.m4a" controls></audio>
+                </li>
+            </ul>
+            <div class="index-btn-wrapper">
+                <div class="index-btn">ⅰ</div>
+                <div class="index-btn">ⅱ</div>
+            </div>
     </section>
     <section class="contact" id="cnt">
         <h2><i class="far fa-paper-plane"></i>Contact</h2>
